@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.vioviocity.legacy</groupId>
     <artifactId>Legacy</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <name>Legacy</name>
     <repositories>
         <repository>
