@@ -1,5 +1,6 @@
 1.1.0
     Added /legacy [leaderboard], displays list of top players based on time
+    Fixed Issue: /legacy (player) not working in console
 1.0.0
     Command /legacy (player) now accessible via console
     Fixed Issue: minutes reported incorrectly after 1 day of accumulated time
